--- a/src/templates/partials/navbar.ejs
+++ b/src/templates/partials/navbar.ejs
@@ -8,11 +8,11 @@
         </li>
       
         <li class="nav-item">
-           <a class="nav-link " href="#">signup</a>
+           <a class="nav-link " href="/signup">signup</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link " href="#">login</a>
+            <a class="nav-link " href="/login">login</a>
         </li>
 
       </ul>
