--- a/src/templates/views/home.ejs
+++ b/src/templates/views/home.ejs
@@ -10,7 +10,7 @@
 <body>
     <%- include('../partials/navbar.ejs') %>                     <!-- for including navbar from partials -->
      
-    
+    <h1>home is here design is pending</h1>
  
    <script src="../jq/jquery.js" type="text/javascript"></script>
    <script src="../js/bootstrap.js" type="text/javascript"></script>
