--- a/src/templates/views/signup.ejs
+++ b/src/templates/views/signup.ejs
@@ -1,85 +1,165 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="..css/bootstrap.min.css">
+    <link rel="stylesheet" href="/signup.css">
+    <link href="//db.onlinewebfonts.com/c/a4e256ed67403c6ad5d43937ed48a77b?family=Core+Sans+N+W01+35+Light" rel="stylesheet" type="text/css"/>
+  
     <title>Document</title>
 </head>
 <body>
 
-    <section class="vh-100" style="background-color: #eee;">
-        <div class="container h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-lg-12 col-xl-11">
-              <div class="card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5">
-                  <div class="row justify-content-center">
-                    <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-      
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-      <!-- ............................................................................................. -->
-                      <form action="/signup" method="post" class="mx-1 mx-md-4">
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input name="name" type="text" id="form3Example1c" class="form-control" />
-                            <label class="form-label" for="form3Example1c">Your Name</label>
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input name="email" type="email" id="form3Example3c" class="form-control" />
-                            <label class="form-label" for="form3Example3c">Your Email</label>
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input name="password" type="password" id="form3Example4c" class="form-control" />
-                            <label class="form-label" for="form3Example4c">Password</label>
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input name="phone" type="password" id="form3Example4cd" class="form-control" />
-                            <label class="form-label" for="form3Example4cd">phone number</label>
-                          </div>
-                        </div>
-      
-                      
-      
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="submit" class="btn btn-primary btn-lg">Register</button>
-                        </div>
-      
-                      </form>
-      
-                    </div>
-                    <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-      
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                        class="img-fluid" alt="Sample image">
-      
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+  
+<div class="body-content">
+  <div class="module">
+
+
+
+    <%if(success!=''){%>
+    <div>
+            <p class="error-message"><%=success%></p> 
+    </div>
+    <%}%>
+
+
+
+
+
+    <h1>Create an account</h1>
+    <form class="form" action="/signup" method="post" autocomplete="on">
+      <div class="alert alert-error"></div>
+      <input type="text" placeholder="User Name" name="name" required />
+      <input type="email" placeholder="Email" name="email" required />
+      <input type="password" placeholder="Password" name="password" autocomplete="new-password" required />
+      <input type="password" placeholder="Phone number" name="phone"  required />
+      <input type="submit" value="Register" name="register" class="btn btn-block btn-primary" />
+    </form>
+  </div>
+</div>
+    
  
    <script src="../jq/jquery.js" type="text/javascript"></script>
    <script src="../js/bootstrap.js" type="text/javascript"></script>
 
+</body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>SignUp form</title>
+	<link rel="stylesheet" href="..css/bootstrap.min.css">
+    <link rel="stylesheet" href="/signup.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	
+
+    <%if(success!=''){%>
+		<div id="show">
+			<%=success%>
+		 </div>
+		<%}%>
+	
+	
+	
+	<img class="wave" src="img/wave.png">
+	<div class="container">
+		<div class="img">
+			<img src="img/bg.svg">
+		</div>
+		<div class="login-content">
+			<form action="/signup" method="post" autocomplete="off">
+				<img src="img/avatar.svg">
+				<h2 class="title">Welcome</h2>
+           		<div class="input-div one">
+           		   <div class="i">
+           		   		<i class="fas fa-user"></i>
+           		   </div>
+           		   <div class="div">
+           		   		<h5>Username</h5>
+           		   		<input name="name" type="text" class="input" required />
+           		   </div>
+           		</div>
+           		<div class="input-div pass">
+           		   <div class="i"> 
+					<i class="fa fa-envelope" aria-hidden="true"></i>
+           		   </div>
+           		   <div class="div">
+           		    	<h5>Email</h5>
+           		    	<input  name="email" type="email" class="input" required />
+            	   </div>
+				   
+            	</div>
+				<div class="input-div pass">
+					<div class="i"> 
+						<i class="fa fa-mobile" aria-hidden="true"></i>
+					</div>
+					<div class="div">
+						 <h5>Phone no</h5>
+						 <input name="phone"  type="password" class="input" required />
+				 </div>
+				 
+			  </div>
+			  <div class="input-div pass">
+				<div class="i"> 
+					 <i class="fas fa-lock"></i>
+
+				</div>
+				<div class="div">
+					 <h5>Password</h5>
+					 <input name="password" type="password" class="input" required />
+			 </div>
+			 
+		  </div>
+            
+            	<input type="submit" class="btn" value="SignUp">
+            </form>
+        </div>
+    </div>
+	<script>
+		function hidediv(){
+			document.getElementById('show').style.visibility='hidden';
+		}
+		setTimeout('hidediv()',3000);
+	</script>
+	<script src="../jq/jquery.js" type="text/javascript"></script>
+	<script src="../js/bootstrap.js" type="text/javascript"></script>
+	<script src="/signup.js"></script>
+	
 </body>
 </html>
