--- a/src/templates/views/userstore.ejs
+++ b/src/templates/views/userstore.ejs
@@ -20,7 +20,7 @@
                 returnDate
             </th>
             <th scope="col">
-                returnDate
+                status
             </th>
             
         </tr>
@@ -31,6 +31,7 @@
                     <td><%=element.name%></td>
                     <td><%=element.price%></td>
                     <td><%=element.time%></td>
+                    <td><%=element.status%></td>
                 </tr>    
                 <%})%>
                 <%}%>
