--- a/src/templates/views/login.ejs
+++ b/src/templates/views/login.ejs
@@ -5,83 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/login.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="box">
-
-    
-    <div class="container">
-        <span >Have an account?</span>
-
-        <div class="top-header">
-            
-            <header>Login</header>
-        </div>
-
-        <!-- flash message -->
-        <%if(message!=''){%>
-            <div id="show">
-                    <p class="error-message"><%=message%></p> 
-            </div>
+   <section>
+ 
+    <div class="imgBx">
+        <img src="loginimage.jpg" alt="">
+    </div>
+    <div class="contentBx">
+        <div class="formBx">
+            <%if(message!=''){%>
+                <div class="alert" id="show"  role="alert">
+                    !!! <%=message%> !!! 
+                  </div>
             <%}%>
-
-    <form action="/login" method="post">
-    <div class="input-field">
-    <input type="text" name="email" placeholder="Email" class="input" required/>
+            
+            <h2>login</h2>
+            <form action="/login" method="post" autocomplete="off">
+                <div class="inputBx">
+                    <div class="i"> 
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                          </div>
+                    <span>Email</span>
+                    <input type="text"placeholder="Email" name="email" required/>
+                </div>
+                <div class="inputBx">
+                    <div class="i"> 
+                        <i class="fas fa-lock"></i>
+   
+                   </div>
+                    <span>Password</span>
+                    <input type="text" name="password" placeholder="Password" required/>
+                </div>
+                <div class="inputBx">
+                    <input type="submit" value="Login" >
+                </div>
+                <div class="inputBx">
+                   <p>Don't have an account?<a href="/signup">Sign up</a></p>
+                </div>
+            </form>
+        </div>
     </div>
-       
-        <br>
-        
-        <div class="input-field">
-            <input type="password" name="password" placeholder="password" class="input" required/> 
-        </div>
-        
-        <br>
-        
-
-        <div >
-            <input type="submit" class="submit" class="move" required/>
-        </div>
-        <br>
-        <div class="down">
-            <a href="/signup" class="reg"> New Here? Register</a>
-        </div>
-        
-    </form>
-    </div>
-</div>
-    
-</body>
-
-
+   </section>
+   
     
 	<script>
 		function hidediv(){
 			document.getElementById('show').style.visibility='hidden';
 		}
 		setTimeout('hidediv()',3000);
-	</script>
+	</script> 
 
    <script src="../jq/jquery.js" type="text/javascript"></script>
-   <script src="../js/bootstrap.js" type="text/javascript"></script>
+   <script src="../js/bootstrap.js" type="text/javascript"></script> 
 
 </body>
 </html>
 
-
-<!-- <h1>Here is the login form</h1>
-    
-        <h2>login here</h2>
-   
-    <form action="/login" method="post">
-        <input type="text" name="email" placeholder="Email" class="el">
-        
-        <br>
-        <div> </div>
-        <input type="password" name="password" placeholder="password" class="pass">
-        <br>
-        <input type="submit" class="sub" >
-        <a href="/signup" class="reg"> New Here? Register</a>
-    </form> -->
