--- a/src/templates/views/signup.ejs
+++ b/src/templates/views/signup.ejs
@@ -89,20 +89,21 @@
 <body>
 	
 
-    <%if(success!=''){%>
-		<div id="show">
-			<%=success%>
-		 </div>
-		<%}%>
+   
 	
 	
-	
+		  
 	<img class="wave" src="img/wave.png">
 	<div class="container">
 		<div class="img">
 			<img src="img/bg.svg">
 		</div>
 		<div class="login-content">
+			<%if(success!=''){%>
+                <div class="alert" id="show"  role="alert">
+                    !!! <%=success%> !!! 
+                  </div>
+            <%}%>
 			<form action="/signup" method="post" autocomplete="off">
 				<img src="img/avatar.svg">
 				<h2 class="title">Welcome</h2>
@@ -151,12 +152,14 @@
             </form>
         </div>
     </div>
+
 	<script>
 		function hidediv(){
 			document.getElementById('show').style.visibility='hidden';
 		}
 		setTimeout('hidediv()',3000);
 	</script>
+
 	<script src="../jq/jquery.js" type="text/javascript"></script>
 	<script src="../js/bootstrap.js" type="text/javascript"></script>
 	<script src="/signup.js"></script>
