--- a/src/templates/views/store.ejs
+++ b/src/templates/views/store.ejs
@@ -8,6 +8,11 @@
 </head>
 <body>
      <h1>categories</h1>
+     <a href="/category/<%=user._id%>/Electronics"> Electronics</a>
+     <a href="/category/<%=user._id%>/Stationary"> Stationary</a>
+     <a href="/category/<%=user._id%>/Clothing"> Clothing</a>
+      <a href="/category/<%=user._id%>/Bicycle"> Bicycle</a>
+      <a href="/category/<%=user._id%>/Books"> Books</a>
 
     <h1>!!!!!!!!!welcome <%=user.name%>!!!!!!</h1>
     <input type="text" name="" id="searchbar" placeholder="Enter object name....">
