--- a/public/home2.css
+++ b/public/home2.css
@@ -1,108 +1,94 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-
+    font-family: sans-serif;
 }
 
 body{
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
-flex-direction: column;
-background: rgb(238, 234, 234);
-}
-
-a{
-    position: relative;
-    left: 450px;
-    width: 260px;
-    height: 80px;
-    margin: 20px;
-    background: rgb(34, 33, 33);
-    text-decoration:none;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-    border-radius: 80px;
+    min-height: 100vh;
+    flex-direction: column;
+    /* background: #040d15; */
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(5,12,55,1) 34%, rgba(11,23,25,1) 85%); 
 
 
-   
+
 }
-a::before{
-    content: '';
+
+
+
+#borrowbtn{
+    text-decoration: none;
+    letter-spacing: 0.5px;
+    color: #fff;
+    position:absolute;
+    top: 30%;
+    left: 70%;
+    font-size: 35px;
+    background: linear-gradient(90deg,#755bea,#ff72c0);
+    transition-timing-function: ease-in-out;
+    transition: transform 0.5s;
+    padding: 35px 72px;
+    margin: 30px 0;
+    border-radius: 25px;
+
+}
+#lendbtn{
+    text-decoration: none;
+    letter-spacing: 0.5px;
+    color: #fff;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 1px;
-    height: 100%;
-    background: rgb(176, 231, 124);
-    transition: 0.5s ease-in-out;
-    
+    top: 50%;
+    left: 68.5%;
+    font-size: 35px;
+    transition-timing-function: ease-in-out;
+    transition: transform 0.5s;
+    padding: 35px 72px;
+    margin: 30px 0;
+    background: linear-gradient(90deg,#0162c8,#55e7fc);
+    border-radius: 25px;
+}
 
+#borrowbtn:hover{
+    transform: scale(1.19);
+    
+}
+#lendbtn:hover{
+
+    transform: scale(0.85);
+    
+}
+#prof{
+
+color: #fff;
+text-decoration: none;
+position: absolute;
+top: 10%;
+left: 80%;
+font-size: x-large
 
 }
-a::after{
-    content: '';
+
+#log{
+    color: #fff;
+text-decoration: none;
+position: absolute;
+top: 10%;
+left: 87%;
+font-size: x-large;
+}
+
+#usr{
+
+    color: #fff;
+    text-decoration: none;
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 1px;
-    height: 100%;
-    background: rgb(176, 231, 124);
-    transition: 0.5s ease-in-out;
-
-
+    top: 10%;
+    left: 75%;
+    font-size: x-large;
 }
-a:nth-child(2)::before,
-a:nth-child(2)::after
-
-{
-    background: rgb(229, 172, 172);
-}
-
-a:hover::before,
-a:hover::after
-{
-    width: 50%;
-    transition-delay: 0s;
-}
-
-a span{
-    position: absolute;
-    z-index:1 ;
-    color: white;
-    font-size: 25px;
-    transition: 0.2s;
-
-}
-a span:nth-child(1)
-{
-transition-delay: 0.25s;
-}
-a:hover span:nth-child(1){
-    transform: scale(1.5);
-    transition-delay: 0.5s;
-}
-a span:nth-child(2)
-{
-transform: scale(3);
-opacity: 0s;
-color: white;
-transition-delay: 0s;
-
-}
-a:hover span:nth-child(2){
-    transform:scale(1.5);
-    transition-delay: 0.5s;
-    
-    
-
-}
-
-
 
 
